using egifter and awaytravel order attribution to update adwords

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -16,4 +16,6 @@ models:
       materialized: view
       vars:
         adwords_base_table:             #"schema.table"
-        campaigns_base_table:           #"schema.table"
+        campaign_performance_report:    #"schema.table"
+        criteria_performance_report:    #"schema.table"
+        click_performance_report:       #"schema.table"
