added foundation of cross-db compatibility

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -11,9 +11,11 @@ data-paths: ["data"]
 
 models:
   adwords:
-    stitch:
-      enabled: true
-      materialized: view
-      vars:
-        criteria_performance_report:    #"schema.table"
-        click_performance_report:       #"schema.table"
+    vars:
+      criteria_performance_report:    #"schema.table"
+      click_performance_report:       #"schema.table"
+      ads_table:                      #"schema.table"
+      ad_groups_table:                #"schema.table"
+      accounts_table:                 #"schema.table"
+      campaigns_table:                #"schema.table"
+        
