add some documentation and separate adapters

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -11,6 +11,12 @@ data-paths: ["data"]
 
 models:
   adwords:
+    stitch:
+      adapters:
+        adwords_url_ad_performance_adapter:
+          enabled: false
+        adwords_gclid_ad_performance_adapter:
+          enabled: true
       criteria_performance_report:    #"schema.table"
       click_performance_report:       #"schema.table"
       final_url_performance_report:   #"schema.table"
