--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -11,16 +11,15 @@ data-paths: ["data"]
 
 models:
   adwords:
-    stitch:
-
       vars:
+        etl:                            #stitch or fivetran
         criteria_performance_report:    #"schema.table"
         click_performance_report:       #"schema.table"
         final_url_performance_report:   #"schema.table"
-        ads_table:                      #"schema.table"
-        ad_groups_table:                #"schema.table"
-        accounts_table:                 #"schema.table"
-        campaigns_table:                #"schema.table"
+        ads_table:                      #"schema.table" (only for stitch)
+        ad_groups_table:                #"schema.table" (only for stitch)
+        accounts_table:                 #"schema.table" (only for stitch)
+        campaigns_table:                #"schema.table" (only for stitch)
 
-        adapter_value:                #url or criteria
+        adapter_value:                  #url or criteria
         
