adds commented out disabling of core tables in dbt_project.yml for easy disabling removes references to fivetran in core models deletes extra new lines at the end of macros

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -1,4 +1,3 @@
-
 name: 'adwords'
 version: '1.1'
 
@@ -11,6 +10,17 @@ data-paths: ["data"]
 
 models:
   adwords:
+# Uncomment to disable core tables for fivetran
+#      base:
+#        adwords_accounts:
+#          enabled: false
+#        adwords_ad_groups:
+#          enabled: false
+#        adwords_ads:
+#          enabled: false
+#        adwords_campaigns:
+#          enabled: false 
+      
       vars:
         etl:                            #stitch or fivetran
         criteria_performance_report:    #"schema.table"
@@ -20,6 +30,4 @@ models:
         ad_groups_table:                #"schema.table" (only for stitch)
         accounts_table:                 #"schema.table" (only for stitch)
         campaigns_table:                #"schema.table" (only for stitch)
-
         adapter_value:                  #url or criteria
-        
