--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -2,7 +2,7 @@ name: 'adwords'
 version: '0.3.0'
 config-version: 2
 
-require-dbt-version: [">=0.17.0"]
+require-dbt-version: [">=0.17.0", "<1.1.0"]
 
 source-paths: ["models"]
 analysis-paths: ["analysis"]
